fixed css error on safari

--- a/web/ponder03/styles.css
+++ b/web/ponder03/styles.css
@@ -9,6 +9,7 @@
 
 body {
     margin: 0;
+    padding: 0;
     color: var(--color-5)
 }
 a {color: var(--color-3)}
@@ -20,7 +21,6 @@ h2 {
     display: flex;
     flex-flow: row wrap;
     flex: 1 100%;
-    height: 100%;
     
 }
 
